--- a/resume.html
+++ b/resume.html
@@ -1,15 +1,14 @@
 ---
-layout: default
+layout: resume
 title: BillyReisinger.com
 ---
 <div class="container">
-  <h2>About me</h2>
   <p>
-    I enjoy programming software and managing computers, and I have been doing so since 2002. I am skilled with many of the technologies that power web applications: Linux systems, databases, web applications, and web user interfaces.
+    I enjoy programming software and managing computers, and I have been doing so since 2002. I am skilled with many of the technologies that power web applications: Linux systems, databases, web applications, and web user interfaces.  In other words, I'm a full-stack engineer. 
   </p>
   <p>
-    I thrive on solving complex problems and I love working in a team.
-    I am passionate about doing excellent work, and I believe that effective and respectful communication is a key component of every successful software team.
+    I thrive on solving complex problems, designing simple solutions, and working in a team.
+    I believe that effective, timely, and respectful communication is a key component of every successful software team.
   </p>
   <p>
     I am a <strong>strong</strong> believer in
@@ -69,7 +68,7 @@ title: BillyReisinger.com
     <li>Invented an effective strategy for client attraction and lead retention using an opt-in email list and push notifications for new vacancies</li>
     <li>Developed new system for collecting and tracking maintenance requests from tenants</li>
   </ul>
-  <h2>Some Open-Source Projects</h2>
+  <h2>Open Source</h2>
   <p>
     <a href='http://github.com/unclebilly/garagio'>Garagio</a> - 
     A web application with custom hardware to open my garage door
@@ -118,8 +117,7 @@ title: BillyReisinger.com
     Board member of the <b>Academy of Information Technology</b>, part of Saint Paul Public Schools' <a href='https://cte.spps.org/'>Career and Technical Education</a> program
   </p>
     
-  <h2>Skills</h2>
-  <h3>Dogma</h3>
+  <h2>Buzzwords</h2>
   <p>
     Test-Driven Development,
     Agile Development,
@@ -129,7 +127,6 @@ title: BillyReisinger.com
     continuous integration,
     devops
   </p>
-  <h3>Programming</h3>
   <p>
     Ruby,
     JavaScript,
@@ -156,7 +153,6 @@ title: BillyReisinger.com
     Ant,
     Capistrano
   </p>
-  <h3>Frameworks</h3>
   <p>
     Ruby on Rails,
     Puppet,
@@ -169,7 +165,6 @@ title: BillyReisinger.com
     iOS,
     Flex
   </p>
-  <h3>Persistence and Messaging</h3>
   <p>
     Oracle,
     Kafka,
