--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,11 @@ title: BillyReisinger.com
   </p>
   <p>
     I thrive on solving complex problems, designing simple solutions, and working in a team.
-    I believe that effective, timely, and respectful communication is a key component of every successful software team.
+    I believe that effective, timely, and respectful communication is a salient trait of every successful software team.
+  </p>
+  <p>
+    I'm an experienced technology leader with a track record of guiding difficult projects
+    to successful completion.
   </p>
   <p>
     I am a <strong>strong</strong> believer in
@@ -22,7 +26,11 @@ title: BillyReisinger.com
     Lastly, I think that having a <a href="http://github.com/unclebilly/logpoop">sense of humor</a> about stuff helps you not die.
   </p>
   <h2>Experience</h2>
-  <b>Software Architect</b>&nbsp;-&nbsp;<a href='http://govdelivery.com'>GovDelivery</a>, St. Paul, MN (April 2014 - present)
+  <b>Director of Software Engineering</b>&nbsp;-&nbsp;<a href='http://govdelivery.com'>GovDelivery</a>, St. Paul, MN (November 2016 - present)
+  <ul>
+    <li>Researched and planned large-scale projects for technology teams</li>
+  </ul>
+  <b>Software Architect</b>&nbsp;-&nbsp;<a href='http://govdelivery.com'>GovDelivery</a>, St. Paul, MN (April 2014 - November 2016)
   <ul>
     <li>Developed with Ruby, Java, Oracle, JavaScript</li>
     <li>Served as Lead engineer on a Scrum team of four engineers</li>
