cache bust link for fixed mp3, update resume

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ title: BillyReisinger.com
      <div class="col-md-4">
       <h2>Software</h2>
       <p>
-        I'm a Software Architect at <a href="http://govdelivery.com">GovDelivery</a>.  
+        I'm a Director of Software Engineering at <a href="https://granicus.com">Granicus</a>.  
         Here are a few open source projects that
         I've started:
       </p>
