--- a/music.html
+++ b/music.html
@@ -92,12 +92,12 @@ title: BillyReisinger.com
     </div>
     <div class="album">
         <h4>Why Bother?</h4>
-        <p><a href='music/CosmicArc/Why_Bother/crowbar.mp3'>crowbar</a></p>
-        <p><a href='music/CosmicArc/Why_Bother/in_case_of_fire.mp3'>in_case_of_fire</a></p>
-        <p><a href='music/CosmicArc/Why_Bother/prelude.mp3'>prelude</a></p>
-        <p><a href='music/CosmicArc/Why_Bother/quasar.mp3'>quasar</a></p>
-        <p><a href='music/CosmicArc/Why_Bother/scotch_and_milk.mp3'>scotch_and_milk</a></p>
-        <p><a href='music/CosmicArc/Why_Bother/untitled.mp3'>untitled</a></p>
+        <p><a href='music/CosmicArc/Why_Bother/crowbar.mp3'>Crowbar</a></p>
+        <p><a href='music/CosmicArc/Why_Bother/in_case_of_fire.mp3'>In Case of Fire</a></p>
+        <p><a href='music/CosmicArc/Why_Bother/prelude.mp3'>Prelude</a></p>
+        <p><a href='music/CosmicArc/Why_Bother/quasar.mp3'>Quasar</a></p>
+        <p><a href='music/CosmicArc/Why_Bother/scotch_and_milk.mp3?b=t'>Scotch And Milk</a></p>
+        <p><a href='music/CosmicArc/Why_Bother/untitled.mp3'>Untitled</a></p>
     </div>
   </div>
   <div class="col-md-12">
