--- a/resume.html
+++ b/resume.html
@@ -26,8 +26,9 @@ title: BillyReisinger.com
     Lastly, I think that having a <a href="http://github.com/unclebilly/logpoop">sense of humor</a> about stuff helps you not die.
   </p>
   <h2>Experience</h2>
-  <b>Director of Software Engineering</b>&nbsp;-&nbsp;<a href='http://govdelivery.com'>GovDelivery</a>, St. Paul, MN (November 2016 - present)
+  <b>Director of Software Engineering</b>&nbsp;-&nbsp;<a href='https://granicus.com'>Granicus</a>, St. Paul, MN (November 2016 - present)
   <ul>
+    <li>Managed team of 20 or so software engineers and 2 DBAs</li>
     <li>Researched and planned large-scale projects for technology teams</li>
   </ul>
   <b>Software Architect</b>&nbsp;-&nbsp;<a href='http://govdelivery.com'>GovDelivery</a>, St. Paul, MN (April 2014 - November 2016)
