--- a/resume.html
+++ b/resume.html
@@ -27,56 +27,26 @@ title: BillyReisinger.com
   </p>
   <h2>Experience</h2>
   <b>Director of Software Engineering</b>&nbsp;-&nbsp;<a href='https://granicus.com'>Granicus</a>, St. Paul, MN (November 2016 - present)
-  <ul>
-    <li>Managed team of 20 or so software engineers and 2 DBAs</li>
-    <li>Researched and planned large-scale projects for technology teams</li>
-  </ul>
+  <p>As the Director of Software Engineering for Granicus' Twin Cities office, I directly manage a team of about 25 engineers.  My duties include people management, employee career development, technical triage, and strategic and tactical technology planning and execution. </p>
   <b>Software Architect</b>&nbsp;-&nbsp;<a href='http://govdelivery.com'>GovDelivery</a>, St. Paul, MN (April 2014 - November 2016)
-  <ul>
-    <li>Developed with Ruby, Java, Oracle, JavaScript</li>
-    <li>Served as Lead engineer on a Scrum team of four engineers</li>
-    <li>Steered technology decisions as member of team leads</li>
-    <li>Mentored other engineers</li>
-  </ul>
+  <p>
+    As a Software Architect at GovDelivery, I was not only one of the people responsible for software architecture, but also made individual contributions in applications and served as a team lead on several Scrum teams (not all at once).  I was also tasked with mentoring other engineers and promoting the greater team's values - TDD, collective ownership, etc.
+  </p>
   <b>Senior Software Engineer</b>&nbsp;-&nbsp;<a href='http://govdelivery.com'>GovDelivery</a>, St. Paul, MN (January 2009 - March 2014)
-  <ul>
-    <li>Ground-up rewrite of an enterprise web application / message delivery system</li>
-    <li>Developed new transactional email, SMS, and voice messaging API</li>
-    <li>Developed company-wide analytics system using Kafka</li>
-    <li>Developed with Ruby, Java, Oracle, JavaScript</li>
-    <li>Worked in a devops team to implement server configuration and provisioning automation using Foreman and Puppet</li>
-    <li>Contributed several major features to open-source Oracle ActiveRecord adapter</li>
-  </ul>
+  <p>
+    As Senior Software Engineer, I was part of a small team that successfully rewrote GovDelivery's legacy system into a modern, test-driven application. I also helped to design and plan several new applications, including a transactional messaging service and a high-volume analytics application. I worked in a small team that established devops as an engineering team-wide practice while overcoming cultural resistance and establishing devops practices as normal workflows. Finally, I created a few open source projects in the company's name and made some major contributions to popular open source projects directly related to Granicus technology.
+  </p>
+  
   <b>Senior Web Developer</b>&nbsp;-&nbsp;<a href='http://www.ibsys.com'>Internet Broadcasting Systems</a>, Minneapolis, MN (December, 2005 - December, 2008)
-  <ul>
-    <li>Lead UI Developer for NowLocal project (December 2007 - September 2008)</li>
-    <li>Lead developer for TheLab, a Flex-based "futures market" on product ideas for internal use</li>
-    <li>
-      Lead Developer,
-      <a href='http://www.nbcsports.com/'>http://www.nbcsports.com/</a>
-      (July 2006 - July 2007).  In this position, I led a team of 8 developers on an agile project.  I presided
-      over a successful relaunch of the site.
-    </li>
-    <li>
-      Web Developer,
-      <a href='http://www.nbcolympics.com'>http://www.nbcolympics.com/</a>
-      (2006 Torino Olympics)
-    </li>
-    <li>
-      Led development of new JavaScript application framework for the company's series of sites (~80)
-      using object-oriented practices and test-driven development
-    </li>
-  </ul>
+  <p>
+    As a Senior Develoer at InternetBroadcasting, I primarily worked with JavaScript, ActionScript/Flex, Ruby, MySQL, and XSLT. I served as a development team lead during a crucial website relaunch for a high-profile, demanding customer. Later I worked as a developer on a cross-functional team to create a greenfield application related to local news. 
+  </p>
   <b>Web Developer</b>&nbsp;-&nbsp;<a href='http://www.fisherrealestate.net'>Fisher Real Estate, L.L.L.P.</a>, Baltimore, MD (May 2002 - December 2005)
-  <ul>
-    <li>
-      Designed, developed, and maintained
-      <a href='http://web.archive.org/web/20060101002301/http://www.fisherrealestate.net/'>company website</a>
-      <em>Note: link goes to the Internet Archive version of this site; company no longer exists</em>
-    </li>
-    <li>Invented an effective strategy for client attraction and lead retention using an opt-in email list and push notifications for new vacancies</li>
-    <li>Developed new system for collecting and tracking maintenance requests from tenants</li>
-  </ul>
+  <p> As a web developer, I designed, developed, and maintained
+      <a href='http://web.archive.org/web/20060101002301/http://www.fisherrealestate.net/'>the company website</a>.
+      <em>Note: link goes to the Internet Archive version of this site; company no longer exists.</em>
+    I also developed an effective strategy for client attraction and lead retention using an opt-in email list and push notifications for new vacancies.  I designed and developed a new system for collecting and tracking maintenance requests from tenants
+  </p>
   <h2>Open Source</h2>
   <p>
     <a href='http://github.com/unclebilly/garagio'>Garagio</a> - 
