--- a/resume.html
+++ b/resume.html
@@ -4,39 +4,45 @@ title: BillyReisinger.com
 ---
 <div class="container">
   <p>
-    I enjoy programming software and managing computers, and I have been doing so since 2002. I am skilled with many of the technologies that power web applications: Linux systems, databases, web applications, and web user interfaces.  In other words, I'm a full-stack engineer. 
+    I'm a technology leader with fifteen years of  technical experience building web-based applications using a wide range of technologies.  I have strong, battle-tested opinions on what makes software teams productive and sustainable.  My development background is full-stack: I have experience with most of the technologies powering modern web applications and web services. 
   </p>
   <p>
-    I thrive on solving complex problems, designing simple solutions, and working in a team.
-    I believe that effective, timely, and respectful communication is a salient trait of every successful software team.
-  </p>
-  <p>
-    I'm an experienced technology leader with a track record of guiding difficult projects
-    to successful completion.
-  </p>
-  <p>
-    I am a <strong>strong</strong> believer in
-    <a href='http://en.wikipedia.org/wiki/Test-driven_development'>Test-Driven Development</a>.  I am well versed in 
-    <a href='http://agilemanifesto.org/'>Agile Development</a>
-    practices, and I
-    <a href='https://github.com/unclebilly'>participate actively</a>
-    in the open source community.
-  </p>
-  <p>
-    Lastly, I think that having a <a href="http://github.com/unclebilly/logpoop">sense of humor</a> about stuff helps you not die.
+    I am strong  believer in Test-Driven Development, I am well versed in Agile Development practices, and I am  a proponent of open source.
   </p>
   <h2>Experience</h2>
   <b>Director of Software Engineering</b>&nbsp;-&nbsp;<a href='https://granicus.com'>Granicus</a>, St. Paul, MN (November 2016 - present)
-  <p>As the Director of Software Engineering for Granicus' Twin Cities office, I directly manage a team of about 25 engineers.  My duties include people management, employee career development, technical triage, and strategic and tactical technology planning and execution. </p>
+  <p>As a director, I oversee multiple teams of software engineers and DBAs, and report directly to the Chief Product Officer.  I established a management structure on a previously flat team to help sustain growth.  I represent software development concerns to stakeholders outside our team, and work closely with product and operations to balance the needs of the teams. I collaborate with the security team to help triage and implement security tasks. </p>
+  <i>Accomplishments:</i>
+  <ul>
+    <li>Established new management structure in a previously flat development team.</li>
+    <li>Coordinated successful database hardware upgrade in two data centers, and participated in data center migration automation efforts.</li>
+    <li>Implemented employee career development plan using OKRs and individual performance metrics.</li>
+    <li>Worked closely with security team to ensure compliance with various security certifications, and pushed forward security initiatives around application development.</li>
+    <li>Developed new metrics for software engineering  team performance.</li>
+    <li>Pushed through successful initiative to implement browser test automation suite with high percentage of feature coverage on par with existing unit and functional testing.</li>
+  </ul>
   <b>Software Architect</b>&nbsp;-&nbsp;<a href='http://govdelivery.com'>GovDelivery</a>, St. Paul, MN (April 2014 - November 2016)
   <p>
-    As a Software Architect at GovDelivery, I was not only one of the people responsible for software architecture, but also made individual contributions in applications and served as a team lead on several Scrum teams (not all at once).  I was also tasked with mentoring other engineers and promoting the greater team's values - TDD, collective ownership, etc.
+    As an architect I served as team lead on several scrum teams, delivering high quality software while advancing the strategic technical direction of the platform. I was a champion of the team’s values - TDD, collective ownership, Agile/Scrum, and sustainable pace.  I was frequently consulted for requirements gathering and design for upcoming product priorities.
   </p>
+  <i>Accomplishments:</i>
+  <ul>
+    <li>Designed and implemented high-performance web analytics streaming application using Ruby on Rails, Kafka, Redis,  JRuby, and Java.</li>
+    <li>Researched, provisioned, and promoted the use of the company’s data streaming architecture, which is now the de facto manner of inter-process communication.</li>
+    <li>Shepherded several high-visibility product initiatives with client commits to full completion before deadlines; worked with client stakeholders as part of Agile process to get the right solution out the door.</li>
+    <li>Served as scrum team lead for several project initiatives, helping to define backlog for the teams and ensuring work was completed correctly and on time.</li>
+  </ul>
   <b>Senior Software Engineer</b>&nbsp;-&nbsp;<a href='http://govdelivery.com'>GovDelivery</a>, St. Paul, MN (January 2009 - March 2014)
   <p>
-    As Senior Software Engineer, I was part of a small team that successfully rewrote GovDelivery's legacy system into a modern, test-driven application. I also helped to design and plan several new applications, including a transactional messaging service and a high-volume analytics application. I worked in a small team that established devops as an engineering team-wide practice while overcoming cultural resistance and establishing devops practices as normal workflows. Finally, I created a few open source projects in the company's name and made some major contributions to popular open source projects directly related to Granicus technology.
+    As Senior Software Engineer, I was part of a small team that successfully rewrote GovDelivery's legacy system into a modern, test-driven application. I also helped to design and plan several new applications, including a transactional messaging service and a high-volume analytics application. I worked in a small team that established devops as a team-wide practice while overcoming significant cultural resistance.
   </p>
-  
+  <i>Accomplishments:</i>
+  <ul>
+    <li>Developed application features in Ruby on Rails, Java, JavaScript, SQL, and HTML/CSS.</li>
+    <li>Led a small crack team of developers and sysadmins to automate provisioning and configuration of virtual machines.</li>
+    <li>Led change to move to a new source code repository and start using merge request workflows.</li>
+    <li>Served as scrum team on several different teams, helping to define backlog for the teams and ensuring work was completed correctly and on time.</li>
+  </ul>
   <b>Senior Web Developer</b>&nbsp;-&nbsp;<a href='http://www.ibsys.com'>Internet Broadcasting Systems</a>, Minneapolis, MN (December, 2005 - December, 2008)
   <p>
     As a Senior Develoer at InternetBroadcasting, I primarily worked with JavaScript, ActionScript/Flex, Ruby, MySQL, and XSLT. I served as a development team lead during a crucial website relaunch for a high-profile, demanding customer. Later I worked as a developer on a cross-functional team to create a greenfield application related to local news. 
